[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/WinnerInfantaryChooser.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/AmericanCaptainPatrius02Fre-G06G.otf"

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/AmericanCaptainPatrius02Fre-G06G.otf"

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/AmericanCaptainPatrius02Fre-G06G.otf"

[sub_resource type="DynamicFont" id=6]
size = 72
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/AmericanCaptainPatrius02Fre-G06G.otf"

[sub_resource type="DynamicFont" id=8]
size = 72
font_data = SubResource( 7 )

[node name="Popup" type="PopupDialog"]
margin_right = 826.0
margin_bottom = 378.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 806.0
margin_bottom = 358.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 786.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "How many infantaries to move to the defeated territory?"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 199.0
margin_right = 786.0
margin_bottom = 277.0
custom_constants/separation = 50
alignment = 1

[node name="Button1Infantary" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 303.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 4 )
text = "1"

[node name="Button2Infantary" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 353.0
margin_right = 417.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 6 )
text = "2"

[node name="Button3Infantary" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 467.0
margin_right = 531.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 8 )
text = "3"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button1Infantary" to="." method="_on_ButtonInfantary_pressed" binds= [ 1 ]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button2Infantary" to="." method="_on_ButtonInfantary_pressed" binds= [ 2 ]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button3Infantary" to="." method="_on_ButtonInfantary_pressed" binds= [ 3 ]]
